Tue Jan 26 10:51:36 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py: Add clear_facets method to base
	  class.

Tue Jan 26 09:43:01 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py,xappy/cachemanager/generic.py,
	  xappy/doctests/searchconnection_doctest2.txt,
	  xappy/mset_search_results.py,xappy/searchconnection.py,
	  xappy/searchresults.py,xappy/unittests/cached_searches.py,
	  xappy/unittests/facets.py: Finish implementing support for facets
	  and stats served from the cache.

Thu Jan 21 16:15:28 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py: Add support for setting facets and
	  stats individually and accumulating them.

Thu Jan 21 15:32:59 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Ensure that queries actually are
	  connected to the SearchConnection that they're returned from.

Thu Jan 21 15:32:06 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/query_serialise.py: Test that empty queries are
	  connected when unserialised.

Wed Jan 20 17:01:58 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/query.py: Add support for requesting facets to the Query
	  object: not yet hooked up.

Wed Jan 20 16:56:53 GMT 2010  Richard Boulton <richard@tartarus.org>

	* docs/introduction.rst,xappy/unittests/db_type1.py,
	  xappy/unittests/weight_action.py: Update for new default backend,
	  and availability of brass backend.  (Percentage weights are
	  slightly different with chert, because it stores more statistics
	  which allow tighter bounds.)

Mon Jan 18 16:36:14 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/indexerconnection.py: Change default type for new databases
	  to chert, and add brass as an option.

Fri Jan 15 10:56:33 GMT 2010  Richard Boulton <richard@tartarus.org>

	* external_posting_source/sortdatabase/sortdatabase.cc: Include